{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 93,
  "lineage": "30d7b889-8737-2a84-d58b-7ba9e099215c",
  "resources": [
    {
      "module": "module.ec2_instance[\"one\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06f555bf2f102b63c",
            "arn": "arn:aws:ec2:us-east-1:835177282091:instance/i-0a5bd57d86184b04f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a5bd57d86184b04f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "trading-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05ae4f11e10d59dcf",
            "private_dns": "ip-10-0-1-92.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.92",
            "public_dns": "ec2-52-87-158-73.compute-1.amazonaws.com",
            "public_ip": "52.87.158.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05482aa20d096dd75",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a0bc0ae508bdaf9e",
            "tags": {
              "Name": "trading-instance-one"
            },
            "tags_all": {
              "Name": "trading-instance-one"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "trading-instance-one"
            },
            "vpc_security_group_ids": [
              "sg-0dd3132d76fae174b"
            ]
          },
          "dependencies": [
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.key_pair.aws_key_pair.this",
            "module.key_pair.tls_private_key.this",
            "module.sg.aws_security_group.this",
            "module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance[\"two\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06f555bf2f102b63c",
            "arn": "arn:aws:ec2:us-east-1:835177282091:instance/i-0642673fe1ab893c4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0642673fe1ab893c4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "trading-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0609cb9b963ae8ebb",
            "private_dns": "ip-10-0-1-135.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.135",
            "public_dns": "ec2-3-83-135-1.compute-1.amazonaws.com",
            "public_ip": "3.83.135.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-001803fcd65735643",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a0bc0ae508bdaf9e",
            "tags": {
              "Name": "trading-instance-two"
            },
            "tags_all": {
              "Name": "trading-instance-two"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "trading-instance-two"
            },
            "vpc_security_group_ids": [
              "sg-0dd3132d76fae174b"
            ]
          },
          "dependencies": [
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.key_pair.aws_key_pair.this",
            "module.key_pair.tls_private_key.this",
            "module.sg.aws_security_group.this",
            "module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:835177282091:security-group/sg-0dd3132d76fae174b",
            "description": "Security group for the trading app instances",
            "egress": [],
            "id": "sg-0dd3132d76fae174b",
            "ingress": [],
            "name": "trading-sg-20240917164034920700000003",
            "name_prefix": "trading-sg-",
            "owner_id": "835177282091",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "trading-sg"
            },
            "tags_all": {
              "Name": "trading-sg"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-047e3e87f0c4cccb6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Custom port 5001",
            "from_port": 5001,
            "id": "sgrule-2107769248",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0dd3132d76fae174b",
            "security_group_rule_id": "sgr-00aa66899b568630a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5001,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Custom port 8000",
            "from_port": 8000,
            "id": "sgrule-1191553966",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0dd3132d76fae174b",
            "security_group_rule_id": "sgr-03cb695bdaf9a252b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:835177282091:network-acl/acl-02162178b3d70a626",
            "default_network_acl_id": "acl-02162178b3d70a626",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-02162178b3d70a626",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "835177282091",
            "subnet_ids": [
              "subnet-0504a0df77276132d",
              "subnet-07e421fe44ac7320e",
              "subnet-09ee1b78200d430e7",
              "subnet-0a0bc0ae508bdaf9e",
              "subnet-0c20fafe7726dca05",
              "subnet-0f5651126cab3109b"
            ],
            "tags": {
              "Name": "trading-vpc-default"
            },
            "tags_all": {
              "Name": "trading-vpc-default"
            },
            "vpc_id": "vpc-047e3e87f0c4cccb6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:835177282091:route-table/rtb-095d76fa2b733622d",
            "default_route_table_id": "rtb-095d76fa2b733622d",
            "id": "rtb-095d76fa2b733622d",
            "owner_id": "835177282091",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "trading-vpc-default"
            },
            "tags_all": {
              "Name": "trading-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-047e3e87f0c4cccb6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:835177282091:security-group/sg-0f6fe14875197822f",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0f6fe14875197822f",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "835177282091",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "trading-vpc-default"
            },
            "tags_all": {
              "Name": "trading-vpc-default"
            },
            "vpc_id": "vpc-047e3e87f0c4cccb6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07b49b652a7c71b1b",
            "arn": "arn:aws:ec2:us-east-1:835177282091:elastic-ip/eipalloc-07b49b652a7c71b1b",
            "domain": "vpc",
            "id": "eipalloc-07b49b652a7c71b1b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-196-36-51.compute-1.amazonaws.com",
            "public_ip": "34.196.36.51",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "trading-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "trading-vpc-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:835177282091:internet-gateway/igw-073f0d73a753d031c",
            "id": "igw-073f0d73a753d031c",
            "owner_id": "835177282091",
            "tags": {
              "Name": "trading-vpc"
            },
            "tags_all": {
              "Name": "trading-vpc"
            },
            "vpc_id": "vpc-047e3e87f0c4cccb6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07b49b652a7c71b1b",
            "association_id": "eipassoc-022171788d17d800b",
            "connectivity_type": "public",
            "id": "nat-04f726a55abbd986b",
            "network_interface_id": "eni-0b03e729792a963b4",
            "private_ip": "10.0.101.62",
            "public_ip": "34.196.36.51",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0504a0df77276132d",
            "tags": {
              "Name": "trading-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "trading-vpc-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-062d44fd2c6000f411080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04f726a55abbd986b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-062d44fd2c6000f41",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-073f0d73a753d031c",
            "id": "r-rtb-00dfb84d261e9ab3a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00dfb84d261e9ab3a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:835177282091:route-table/rtb-062d44fd2c6000f41",
            "id": "rtb-062d44fd2c6000f41",
            "owner_id": "835177282091",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "trading-vpc-private"
            },
            "tags_all": {
              "Name": "trading-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-047e3e87f0c4cccb6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:835177282091:route-table/rtb-00dfb84d261e9ab3a",
            "id": "rtb-00dfb84d261e9ab3a",
            "owner_id": "835177282091",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "trading-vpc-public"
            },
            "tags_all": {
              "Name": "trading-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-047e3e87f0c4cccb6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0718f885358559a70",
            "route_table_id": "rtb-062d44fd2c6000f41",
            "subnet_id": "subnet-0a0bc0ae508bdaf9e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06368c2e8c3baf6e4",
            "route_table_id": "rtb-062d44fd2c6000f41",
            "subnet_id": "subnet-09ee1b78200d430e7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c43c56aa8fbeb258",
            "route_table_id": "rtb-062d44fd2c6000f41",
            "subnet_id": "subnet-0f5651126cab3109b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c2bc385df961937",
            "route_table_id": "rtb-00dfb84d261e9ab3a",
            "subnet_id": "subnet-0504a0df77276132d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5d4e3d89942ecaa",
            "route_table_id": "rtb-00dfb84d261e9ab3a",
            "subnet_id": "subnet-0c20fafe7726dca05"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0998910b3077cea80",
            "route_table_id": "rtb-00dfb84d261e9ab3a",
            "subnet_id": "subnet-07e421fe44ac7320e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:835177282091:subnet/subnet-0a0bc0ae508bdaf9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0bc0ae508bdaf9e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "835177282091",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "trading-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "trading-vpc-private-us-east-1a"
            },
            "vpc_id": "vpc-047e3e87f0c4cccb6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:835177282091:subnet/subnet-09ee1b78200d430e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ee1b78200d430e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "835177282091",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "trading-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "trading-vpc-private-us-east-1b"
            },
            "vpc_id": "vpc-047e3e87f0c4cccb6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:835177282091:subnet/subnet-0f5651126cab3109b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5651126cab3109b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "835177282091",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "trading-vpc-private-us-east-1c"
            },
            "tags_all": {
              "Name": "trading-vpc-private-us-east-1c"
            },
            "vpc_id": "vpc-047e3e87f0c4cccb6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:835177282091:subnet/subnet-0504a0df77276132d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0504a0df77276132d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "835177282091",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "trading-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Name": "trading-vpc-public-us-east-1a"
            },
            "vpc_id": "vpc-047e3e87f0c4cccb6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:835177282091:subnet/subnet-0c20fafe7726dca05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c20fafe7726dca05",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "835177282091",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "trading-vpc-public-us-east-1b"
            },
            "tags_all": {
              "Name": "trading-vpc-public-us-east-1b"
            },
            "vpc_id": "vpc-047e3e87f0c4cccb6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:835177282091:subnet/subnet-07e421fe44ac7320e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e421fe44ac7320e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "835177282091",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "trading-vpc-public-us-east-1c"
            },
            "tags_all": {
              "Name": "trading-vpc-public-us-east-1c"
            },
            "vpc_id": "vpc-047e3e87f0c4cccb6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:835177282091:vpc/vpc-047e3e87f0c4cccb6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02162178b3d70a626",
            "default_route_table_id": "rtb-095d76fa2b733622d",
            "default_security_group_id": "sg-0f6fe14875197822f",
            "dhcp_options_id": "dopt-0933aecd1b5af6b0c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-047e3e87f0c4cccb6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-095d76fa2b733622d",
            "owner_id": "835177282091",
            "tags": {
              "Name": "trading-vpc"
            },
            "tags_all": {
              "Name": "trading-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}